# sheep-engine

./: .clang-format  meson.build
include/: engine.h  mesh.h  resource.h  shader.h  system.h  world.h
include/mesh_formats/: obj_mesh.h
include/nodes/: camera.h  mesh_renderer.h  node.h  skinned_mesh_renderer.h  transform.h  utility.h
include/resources/: mesh.h  renderable_mesh.h  resource.h  shader.h  skeleton.h  skin.h  skinned_mesh.h  texture.h
include/resources/mesh_formats/: gltf_mesh.h  obj_mesh.h
include/resources/texture_formats/: png_texture.h
include/resources/transit/: skin.h  transit.h
include/systems/: input_system.h  render_system.h  super_system.h  system.h
include/utility/: cached.h  disjoint_set.h  hton.h  hton_extra.h  json.h  resource_handle.h  scope_cleanup.h  status.h  type_group.h
src/: engine.cpp  main.cpp  mesh.cpp  resource.cpp  shader.cpp  system.cpp  world.cpp
src/mesh_formats/: obj_mesh.cpp
src/nodes/: camera.cpp  mesh_renderer.cpp  node.cpp  skinned_mesh_renderer.cpp  transform.cpp  utility.cpp
src/resources/: mesh.cpp  renderable_mesh.cpp  resource.cpp  shader.cpp  skeleton.cpp  skinned_mesh.cpp  texture.cpp
src/resources/mesh_formats/: gltf_mesh.cpp  obj_mesh.cpp
src/resources/texture_formats/: png_texture.cpp
src/resources/transit/: mesh.cpp  skeleton.cpp  skin.cpp  transit.cpp
src/systems/: input_system.cpp  render_system.cpp  super_system.cpp  system.cpp
src/utility/: disjoint_set.cpp  json.cpp  scope_cleanup.cpp
tools/: meson.build
tools/resource_converter/: meson.build
tools/resource_converter/include/: gltf_mesh.h
tools/resource_converter/include/resources/transit/: transit_write.h
tools/resource_converter/src/: gltf_mesh.cpp  main.cpp
tools/resource_converter/src/resources/transit/: mesh.cpp  skeleton.cpp  skin.cpp  transit_write.cpp
